--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+#--Flutter
+
 # Miscellaneous
 *.class
 *.lock
@@ -130,6 +132,8 @@ app.*.symbols
 !**/ios/**/default.perspectivev3
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
 !/dev/ci/**/Gemfile.lock
+
+# --Vue.js
 
 .DS_Store
 node_modules
