--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -14,6 +14,7 @@ jobs:
       - uses: subosito/flutter-action@v1
         with:
           channel: "dev"
+      - run: flutter latest install
       - run: flutter config --enable-web
       - run: flutter pub get
       - run: flutter build web --release
