--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.5
   flutter_chip_tags: ^2.0.2
+  firebase_core: ^2.5.0
+  flutterfire_ui: ^0.4.3+20
 
 dev_dependencies:
   flutter_launcher_icons: ^0.11.0
