--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -13,7 +13,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.nylo.dev</string>
+	<string>it.deprem.tercumanbul</string>
 	<key>PROJECT_ID</key>
 	<string>tercuman-bulmaca</string>
 	<key>STORAGE_BUCKET</key>
