--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   flutter_chip_tags: ^2.0.2
   firebase_core: ^2.5.0
   flutterfire_ui: ^0.4.3+20
+  change_app_package_name: ^1.1.0
 
 dev_dependencies:
   flutter_launcher_icons: ^0.11.0
