--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,8 +33,12 @@ dependencies:
   firebase_core: ^2.5.0
   flutterfire_ui: ^0.4.3+20
   change_app_package_name: ^1.1.0
+  responsive_framework: ^0.2.0
+  freezed: ^2.3.2
+  freezed_annotation: ^2.2.0
 
 dev_dependencies:
+  build_runner: ^2.3.3
   flutter_launcher_icons: ^0.11.0
 #  lints: ^2.0.0
   flutter_test:
