feat(lint-for-code-base): dart
this dependiency will lint our code base

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dev_dependencies:
 #  lints: ^2.0.0
   flutter_test:
     sdk: flutter
+  lint: ^2.0.1
 
 # APP ICON - public/assets/app_icon/icon.png
 # Build icons: "flutter pub run flutter_launcher_icons:main"
