feat(models): api service and models are added for translators db

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_NAME="Nylo"
+APP_NAME="TercumanBulucu"
 APP_ENV="local"
 APP_DEBUG=true
 APP_URL="https://nylo.dev"
@@ -12,3 +12,5 @@ DEFAULT_LOCALE="en"
 
 LIGHT_THEME_ID="light_theme"
 DARK_THEME_ID="dark_theme"
+
+TRANSLATOR_DB=dev
