--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   freezed: ^2.3.2
   freezed_annotation: ^2.2.0
   json_annotation: ^4.8.0
+  cloud_firestore: ^4.3.2
 
 dev_dependencies:
   build_runner: ^2.3.3
