--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -46,6 +46,7 @@ android {
         targetSdkVersion 33
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
+        multiDexEnabled true
     }
 
     buildTypes {
