--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   cloud_firestore: ^4.3.2
   syncfusion_flutter_datagrid: ^20.4.49
   flutter_launcher_icons: ^0.11.0
+  expandable: ^5.0.1
 
 dev_dependencies:
   build_runner: ^2.3.3
