--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   syncfusion_flutter_datagrid: ^20.4.49
   flutter_launcher_icons: ^0.11.0
   expandable: ^5.0.1
+  flag: ^6.0.0
 
 dev_dependencies:
   build_runner: ^2.3.3
@@ -85,6 +86,7 @@ flutter:
     - public/assets/app_icon/
     - lang/
     - .env
+    - public/assets/data/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
