--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   flutter_launcher_icons: ^0.11.0
   expandable: ^5.0.1
   flag: ^6.0.0
+  material_design_icons_flutter: ^6.0.7096
 
 dev_dependencies:
   build_runner: ^2.3.3
