--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,8 +42,9 @@ dependencies:
   syncfusion_flutter_datagrid: ^20.4.49
   flutter_launcher_icons: ^0.11.0
   expandable: ^5.0.1
-  flag: ^6.0.0
   material_design_icons_flutter: ^6.0.7096
+  flutter_localized_locales: ^2.0.4
+  dash_flags: ^0.0.3
 
 dev_dependencies:
   build_runner: ^2.3.3
