--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   material_design_icons_flutter: ^6.0.7096
   flutter_localized_locales: ^2.0.4
   dash_flags: ^0.0.3
+  diacritic: ^0.1.3
 
 dev_dependencies:
   build_runner: ^2.3.3
