+add google sign in -  write user

--- a/.env
+++ b/.env
@@ -14,3 +14,5 @@ LIGHT_THEME_ID="light_theme"
 DARK_THEME_ID="dark_theme"
 
 TRANSLATOR_DB=dev
+
+GOOGLE_CLIENT_ID="904450609059-snbia0s7536il55g02vfk1qod3plet67.apps.googleusercontent.com"
