--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   flutter_localized_locales: ^2.0.4
   dash_flags: ^0.0.3
   diacritic: ^0.1.3
+  google_sign_in: ^5.4.4
 
 dev_dependencies:
   build_runner: ^2.3.3
