--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,7 @@ flutter:
     - public/assets/fonts/
     - public/assets/images/
     - public/assets/app_icon/
+    - public/assets/images/logo_lq.png
     - lang/
     - .env
     - public/assets/data/
