fix(icon): change pubspec

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,6 +71,7 @@ flutter:
     - public/assets/images/
     - public/assets/app_icon/
     - public/assets/images/logo_lq.png
+    - assets/public/images/logo_lq.png
     - lang/
     - .env
     - public/assets/data/
