--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   dash_flags: ^0.0.3
   diacritic: ^0.1.3
   google_sign_in: ^5.4.4
+  dropdown_search: ^5.0.5
 
 dev_dependencies:
   build_runner: ^2.3.3
