--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   diacritic: ^0.1.3
   google_sign_in: ^5.4.4
   dropdown_search: ^5.0.5
+  flutter_linkify: ^5.0.2
 
 dev_dependencies:
   build_runner: ^2.3.3
