--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   google_sign_in: 5.4.4
   dropdown_search: 5.0.5
   flutter_linkify: 5.0.2
+  location: 4.4.0
 
 dev_dependencies:
   build_runner: 2.3.3
