--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dev_dependencies:
   freezed_annotation: 2.2.0
   analyzer: 5.5.0
   change_app_package_name: 1.1.0
+  flutter_lints: ^2.0.1
 
 # APP ICON - public/assets/app_icon/icon.png
 # Build icons: "flutter pub run flutter_launcher_icons:main"
