--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
+  firebase_ui_localizations: 1.2.0
   cupertino_icons: 1.0.5
   flutter_chip_tags: 2.0.2
   firebase_core: 2.5.0
