--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,7 @@ dependencies:
   firebase_ui_localizations: 1.2.0
   cupertino_icons: 1.0.5
   flutter_chip_tags: 2.0.2
-  firebase_core: 2.5.0
+  firebase_core: 2.6.1
   firebase_ui_auth: 1.1.11
   responsive_framework: 0.2.0
   firebase_ui_oauth_google: 1.0.18
@@ -43,6 +43,10 @@ dependencies:
   dropdown_search: 5.0.5
   flutter_linkify: 5.0.2
   location: 4.4.0
+  freezed_annotation: 2.2.0
+  firebase_auth: 4.2.8
+  nylo_support: 4.1.1
+  universal_html: ^2.0.9
 
 dev_dependencies:
   build_runner: 2.3.3
@@ -51,7 +55,6 @@ dev_dependencies:
   json_serializable: 6.6.1
   lint: 2.0.1
   freezed: 2.3.2
-  freezed_annotation: 2.2.0
   analyzer: 5.5.0
   change_app_package_name: 1.1.0
   flutter_lints: ^2.0.1
