--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,7 +46,8 @@ dependencies:
   freezed_annotation: 2.2.0
   firebase_auth: 4.2.8
   nylo_support: 4.1.1
-  universal_html: ^2.0.9
+  universal_html: 2.0.9
+  shared_preferences: 2.0.17
 
 dev_dependencies:
   build_runner: 2.3.3
