--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,7 @@ dependencies:
   cupertino_icons: 1.0.5
   flutter_chip_tags: 2.0.2
   firebase_core: 2.6.1
-  firebase_ui_auth: 1.1.11
+  firebase_ui_auth: 1.1.13
   responsive_framework: 0.2.0
   firebase_ui_oauth_google: 1.0.18
   json_annotation: 4.8.0
@@ -46,7 +46,8 @@ dependencies:
   freezed_annotation: 2.2.0
   firebase_auth: 4.2.8
   nylo_support: 4.1.1
-  universal_html: ^2.0.9
+  universal_html: 2.0.9
+  shared_preferences: 2.0.17
 
 dev_dependencies:
   build_runner: 2.3.3
