--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
-APP_NAME="TercumanBulucu"
+APP_NAME="Tercuman Bul"
 APP_ENV="local"
 APP_DEBUG=true
-APP_URL="https://nylo.dev"
+APP_URL="https://tercuman-bulmaca.web.app"
 
-API_BASE_URL="https://your-api.com"
+API_BASE_URL="https://us-central1-tercuman-bulmaca.cloudfunctions.net/"
 
 ASSET_PATH_PUBLIC="public/assets"
 ASSET_PATH_IMAGES="public/assets/images"
