--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
   responsive_framework: 0.2.0
   firebase_ui_oauth_google: 1.0.18
   json_annotation: 4.8.0
-  cloud_firestore: 4.4.0
+  cloud_firestore: 4.4.2
   syncfusion_flutter_datagrid: 20.4.50
   expandable: 5.0.1
   material_design_icons_flutter: 6.0.7096
@@ -48,6 +48,7 @@ dependencies:
   nylo_support: 4.1.1
   universal_html: 2.0.9
   shared_preferences: 2.0.17
+  flutter_geofire: 2.0.3
 
 dev_dependencies:
   build_runner: 2.3.3
