--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -15,8 +15,7 @@ jobs:
         with:
           flutter-version: '3.7.3'
           channel: 'stable'
-      - run: flutter config --enable-web
-      - run: flutter pub get
+      - run: flutter config --enable-web && flutter pub get
       - run: flutter build web --dart-define ENV_FILE_PATH=.env --release
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
