--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,7 +77,7 @@ flutter:
     - public/assets/images/
     - public/assets/app_icon/
     - lang/
-    - .env
+    - dotenv
     - public/assets/data/
   #   - images/a_dot_ham.jpeg
 
