--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   universal_html: 2.0.9
   shared_preferences: 2.0.17
   flutter_geofire: 2.0.3
+  flutter_dotenv: 5.0.2
 
 dev_dependencies:
   build_runner: 2.3.3
@@ -78,8 +79,8 @@ flutter:
     - public/assets/app_icon/
     - lang/
     - dotenv
+    - .env
     - public/assets/data/
-  #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
