--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -11,6 +11,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - name: Cache Flutter dependencies
+          uses: actions/cache@v1
+          with:
+            path: /opt/hostedtoolcache/flutter
+            key: ${{ runner.OS }}-flutter-install-cache-3.7.3
       - uses: subosito/flutter-action@v2
         with:
           flutter-version: '3.7.3'
