--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -10,6 +10,11 @@ jobs:
       - uses: actions/checkout@v3
         with:
           ref: "refs/pull/${{ github.event.number }}/merge"
+      - name: Cache Flutter dependencies
+          uses: actions/cache@v1
+          with:
+            path: /opt/hostedtoolcache/flutter
+            key: ${{ runner.OS }}-flutter-install-cache-3.7.3
       - uses: subosito/flutter-action@v2
         with:
           flutter-version: "3.7.3"
