--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -10,15 +10,10 @@ jobs:
       - uses: actions/checkout@v3
         with:
           ref: "refs/pull/${{ github.event.number }}/merge"
-      - name: Cache Flutter dependencies
-        uses: actions/cache@v1
+      - name: Setup Flutter
+        uses: hrishikesh-kadam/setup-flutter@v1
         with:
-          path: /opt/hostedtoolcache/flutter
-          key: ${{ runner.OS }}-flutter-install-cache-3.7.3
-      - uses: subosito/flutter-action@v2
-        with:
-          flutter-version: "3.7.3"
-          channel: "stable"
+          ref: 3.7.3
       - run: flutter config --enable-web && flutter pub get
       - run: flutter build web --dart-define ENV_FILE_PATH=dotenv --release
       - uses: FirebaseExtended/action-hosting-deploy@v0
