--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -2,10 +2,7 @@
 # https://github.com/firebase/firebase-tools
 
 name: Deploy to Firebase Hosting on merge
-"on":
-  push:
-    branches:
-      - main
+on: workflow_dispatch
 jobs:
   build_and_deploy:
     name: Build and deploy to beta
