--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -2,7 +2,10 @@
 # https://github.com/firebase/firebase-tools
 
 name: Deploy to Firebase Hosting on merge
-on: workflow_dispatch
+on:
+  push:
+    branches:
+      - main
 jobs:
   build_and_deploy:
     name: Build and deploy to beta
