--- a/.github/workflows/firebase-hosting-prod.yml
+++ b/.github/workflows/firebase-hosting-prod.yml
@@ -2,10 +2,7 @@
 # https://github.com/firebase/firebase-tools
 
 name: Deploy to Firebase Hosting Prod
-on:
-  push:
-    branches:
-      - main
+on: workflow_dispatch
 jobs:
   build_and_deploy:
     name: Build and deploy to prod
