ci: Prod deploy

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,18 @@
 {
   "projects": {
     "default": "tercuman-bulmaca"
-  }
+  },
+  "targets": {
+    "tercuman-bulmaca": {
+      "hosting": {
+        "beta": [
+          "tercuman-bulmaca"
+        ],
+        "prod": [
+          "tercumanbul"
+        ]
+      }
+    }
+  },
+  "etags": {}
 }
