--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -24,3 +24,4 @@ jobs:
           firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT_TERCUMAN_BULMACA }}"
           channelId: live
           projectId: tercuman-bulmaca
+          target: beta
