--- a/.github/workflows/firebase-hosting-prod.yml
+++ b/.github/workflows/firebase-hosting-prod.yml
@@ -21,4 +21,4 @@ jobs:
           firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT_TERCUMAN_BULMACA }}"
           channelId: live
           projectId: tercuman-bulmaca
-          target: tercumanbul
+          target: prod
