--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -16,7 +16,7 @@ jobs:
         with:
           ref: 3.7.3
       - run: flutter config --enable-web && flutter pub get
-      - run: flutter build web --dart-define ENV_FILE_PATH=dotenv --release
+      - run: flutter build web --dart-define ENV_FILE=dotenv --release
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: "${{ secrets.GITHUB_TOKEN }}"
