--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   flutter_geofire: 2.0.3
   flutter_dotenv: 5.0.2
   intl_phone_field: 3.1.0
+  firebase_messaging: ^14.2.4
 
 dev_dependencies:
   build_runner: 2.3.3
