--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,10 +15,10 @@ environment:
   sdk: '>=2.19.0 <3.0.0'
 
 dependencies:
-  url_launcher: 6.1.9
+  url_launcher: 6.1.10
   google_fonts: 4.0.3
   intl: 0.17.0
-  nylo_framework: 4.1.3
+  nylo_framework: 4.1.4
   pretty_dio_logger: 1.3.1
   flutter:
     sdk: flutter
@@ -26,28 +26,28 @@ dependencies:
     sdk: flutter
   firebase_ui_localizations: 1.2.0
   flutter_chip_tags: 2.0.2
-  firebase_core: 2.6.1
-  firebase_ui_auth: 1.1.13
+  firebase_core: 2.7.1
+  firebase_ui_auth: 1.1.16
   responsive_framework: 0.2.0
-  firebase_ui_oauth_google: 1.0.18
+  firebase_ui_oauth_google: 1.0.23
   json_annotation: 4.8.0
-  cloud_firestore: 4.4.2
+  cloud_firestore: 4.4.4
   expandable: 5.0.1
   material_design_icons_flutter: 6.0.7096
   flutter_localized_locales: 2.0.4
   diacritic: 0.1.3
-  dropdown_search: 5.0.5
+  dropdown_search: 5.0.6
   flutter_linkify: 5.0.2
   location: 4.4.0
   freezed_annotation: 2.2.0
-  firebase_auth: 4.2.8
-  nylo_support: 4.3.0
-  universal_html: 2.0.9
-  shared_preferences: 2.0.17
+  firebase_auth: 4.2.10
+  nylo_support: 4.3.1
+  universal_html: 2.2.1
+  shared_preferences: 2.0.18
   flutter_geofire: 2.0.3
   flutter_dotenv: 5.0.2
   intl_phone_field: 3.1.0
-  firebase_messaging: ^14.2.4
+  firebase_messaging: 14.2.6
 
 dev_dependencies:
   build_runner: 2.3.3
@@ -56,9 +56,9 @@ dev_dependencies:
   json_serializable: 6.6.1
   lint: 2.0.1
   freezed: 2.3.2
-  analyzer: 5.5.0
+  analyzer: 5.7.1
   change_app_package_name: 1.1.0
-  flutter_lints: ^2.0.1
+  flutter_lints: 2.0.1
 
 # APP ICON - public/assets/app_icon/icon.png
 # Build icons: "flutter pub run flutter_launcher_icons:main"
